Fixed marketing popup’s close button visibitily issues

--- a/assets/css/atum-marketing-popup.css
+++ b/assets/css/atum-marketing-popup.css
@@ -4,7 +4,7 @@
  * @author BE REBEL  
  *
  * Author URI: https://berebel.studio 
- * License : ©2024 Stock Management Labs 
+ * License : ©2025 Stock Management Labs 
  */
 
  @charset "UTF-8";
@@ -2169,6 +2169,9 @@ input[type=button].btn-block {
 }
 .swal2-container .marketing-popup .swal2-confirm {
   margin-right: 10px;
+}
+.swal2-container .marketing-popup .swal2-close {
+  background: #FFF;
 }
 .swal2-container .marketing-popup .mp-logo {
   width: 170px;
